@@ -41,16 +41,21 @@
     <nav>
       <a href="https://theema-dev.github.io/highRES/"><img class="noLazyLoad" id="nav-logo-resize" src="https://theema-dev.github.io/highRES/local/nav-logo1.webp"></a>
       <ul>
-        <li class="nav-last nav-dropdown">
+        <li class="mobileNav" style="padding-right: 0.85rem; padding-left: 0.85rem;">
+          <a href="javascript:void(0);" onclick="mobileTriggered()">
+            <span class="nav-icon nav-menu"></span> 
+          </a>
+        </li>
+        <li class="nav-last nav-dropdown responsiveNav l4" id="func">
           <a href="javascript:void(0)" class="dropbtn">UPLOAD</a>
           <div class="dropdown-content">
             <a href="https://www.dropbox.com/request/vUKTvrSjgyRl8NrJM4eG" target="_blank"> GRID </a>
             <a href="https://www.dropbox.com/request/E3NIFtjXvdJNKzCGKgbm" target="_blank"> ASSET </a>
           </div>
         </li>
-        <li><a href="https://theema-dev.github.io/highRES/collections">COLLECTIONS</a></li>
-        <li><a href="https://theema-dev.github.io/highRES/assets">ASSETS</a></li>
-        <li class="current"><a href="https://theema-dev.github.io/highRES/">GRIDS</a></li>
+        <li class="responsiveNav l3" id="func"><a href="https://theema-dev.github.io/highRES/collections">COLLECTIONS</a></li>
+        <li class="responsiveNav l2" id="func"><a href="https://theema-dev.github.io/highRES/assets">ASSETS</a></li>
+        <li class="current responsiveNav l1" id="func"><a href="https://theema-dev.github.io/highRES/">GRIDS</a></li>
       </ul>
     </nav>
     <br><br><br><br>
@@ -77,10 +82,6 @@
       <div class="col"><a href="cdn/grid/3.png" title="Parkasaurus (2018) by theEMA"><img id="shown" data-lazy="cdn/thumb/3.webp" alt="Parkasaurus (2018)"></a></div>
       <div class="col"><a href="cdn/grid/2.png" title="Factorio (2016) by theEMA"><img id="shown" data-lazy="cdn/thumb/2.webp" alt="Factorio (2016)"></a></div>
       <div class="col"><a href="cdn/grid/1.png" title="Aion Collector's Edition (2009) by theEMA"><img id="shown" data-lazy="cdn/thumb/1.webp" alt="Aion Collector's Edition (2009)"></a></div>
-      <div class="col"><a><img id="hidden"></a></div>
-      <div class="col"><a><img id="hidden"></a></div>
-      <div class="col"><a><img id="hidden"></a></div>
-      <div class="col"><a><img id="hidden"></a></div>
     </div>
     <div class="footer">
       <div class="left">
@@ -92,6 +93,21 @@
       </div>
     </div>
     <script src="local/splashIntro.js"></script>
+    <script>
+      function mobileTriggered() {
+        var navElement = document.getElementsByClassName("responsiveNav");
+        var displaySetting = navElement[0].style.display;
+        var i;
+        for(var i=0; i < 4; i++) {
+          if (displaySetting == 'block') { 
+          navElement[i].style.display = 'none';
+          }
+          else { 
+          navElement[i].style.display = 'block';
+          }
+        }
+      }
+      </script>
     <script src="local/script/variable.js"></script>
   </body>
 </html>
