@@ -5,6 +5,10 @@ ________________________________________________________________________________
 #########################                               #########################
 _________________________________________________________________________________
 
+[Version 200972f]
+- Mobile nav integrated
+- Flexbox optimized.
+
 [Version 200972b]
 - Navigation now fully functional!
 - Mobile is currently not supported.
